fix: Hide scrollbars on desktop.

--- a/app/styles.css
+++ b/app/styles.css
@@ -84,6 +84,14 @@
     --destructive: 0 63% 31%;
     --destructive-foreground: 210 40% 98%;
   }
+
+  html {
+    scrollbar-width: 0;
+  }
+
+  body::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .mauve {
